--- a/piccup-app/src/App.css
+++ b/piccup-app/src/App.css
@@ -3,36 +3,54 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #00AD50;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-body {
+  display: flex;
+  flex-direction: column;
+  margin: 0 15vw;
+  font-size: calc(10px + 1vmin);
+  justify-content: center;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-form {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: left;
+  text-align: left;
+  margin: 0 15vw;
+  font-size: calc(15px + 1vmin);
+}
+
+input[type=text], input[type=number], input[type=date], input[type=time], select, textarea {
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: calc(10px + 1vmin);
+}
+
+input[type=submit] {
+  align-self: center;
+  width: 75%;
+  padding: 20px;
+  margin-top: 10px;
+  resize: vertical;
+  margin-bottom: 10px;
+  font-size: calc(10px + 1vmin);
 }
