form and css fixes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,19 +21,24 @@ html {
 #game-form-container {
     vertical-align: center;
     font-size: calc(10px + 1vmin);
+    margin: 20px 120px;
 }
 
 #game-form {
     line-height: 40px; 
     display: inline-block;
     vertical-align: middle;
-    width: auto;
 }
 
-.submit-button {
-    margin-right: 4px;
-}
-
+input[type=submit] {
+    align-self: center;
+    width: 75%;
+    margin-top: 10px;
+    resize: vertical;
+    margin-bottom: 10px;
+    font-size: calc(10px + 1vmin);
+  }
+  
 input[type=text], input[type=number], input[type=date], input[type=time], select, textarea {
   width: 100%;
   padding: 10px;
