--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ html {
     vertical-align: center;
     align-items: center;
     font-size: calc(10px + 1vmin);
-    margin: 20px 120px;
+    margin: 20px 20px;
 }
 #game-form-button {
     align-self: center;
@@ -32,7 +32,10 @@ html {
     margin-bottom: 10px;
     font-size: calc(10px + 1vmin);
 }
-
+#homepage-columns {
+    width: 100vmin;
+    margin: 20px auto;
+}
 
 input[type=submit] {
     align-self: center;
