--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,3 +61,7 @@ input[type=text], input[type=number], input[type=date], input[type=time], select
 .close-button {
     position: relative; left: 260px; bottom: 15px;
 }
+
+#card-header-content {
+    font-size: medium;
+}
