--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,3 +49,46 @@ input[type=text], input[type=number], input[type=date], input[type=time], select
 .close-button {
     position: relative; left: 260px; bottom: 15px;
 }
+
+.bio {
+    margin-top: 30px;
+    position: relative; left: 50px; bottom: 15px;
+}
+
+.profile-column {
+    border-style: solid;
+    border-width: 2px;
+    border-top: 0px;
+    border-bottom: 0px;
+}
+
+.profile-column-left {
+    border-style: solid;
+    border-width: 2px;
+    border-top: 0px;
+    border-bottom: 0px;
+    border-right: 0px;
+}
+
+.profile-column-right {
+    border-style: solid;
+    border-width: 2px;
+    border-top: 0px;
+    border-bottom: 0px;
+    border-left: 0px;
+}
+
+.attribute-value {
+    position: relative; top: 25px;
+}
+.edit-profile-button {
+    position: relative; left: 15px; bottom: 10px;
+}
+
+.submit-button {
+    margin-right: 4px;
+}
+
+.edit-profile-close-button{
+    position: relative; bottom: 15px; left: 210px;
+}
