--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,3 +92,7 @@ input[type=text], input[type=number], input[type=date], input[type=time], select
 .edit-profile-close-button{
     position: relative; bottom: 15px; left: 210px;
 }
+
+.header-message {
+    position: relative; left: 315px;
+}
