--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,13 @@ html {
     display: block;
     margin: auto;
 }
+
+.navbar-brand{
+    height: 6rem;
+}
+
+
+
 .login-button {
     margin-bottom: 6px;
 }
@@ -21,8 +28,8 @@ html {
 #game-form-container {
     align-items: center;
     font-size: calc(10px + 1vmin);
-    margin: 0px 20px;
 }
+
 #game-form-button {
     align-self: center;
     width: 100%;
@@ -32,8 +39,13 @@ html {
     font-size: calc(10px + 1vmin);
 }
 #homepage-columns {
-    width: 100vmin;
+    width: 90vmin;
     margin: 20px auto;
+}
+
+#feed {
+    overflow-y: scroll;
+    max-height: 60vh;
 }
 
 input[type=submit] {
@@ -54,11 +66,14 @@ input[type=text], input[type=number], input[type=date], input[type=time], select
 }
 
 #filter-container {
-    width: 99vmin;
+    width: 90vmin;
     margin: auto;
     text-align: center;
 }
 
+#header {
+    margin: 50px;
+}
 
 .game-card {
     margin: 20px;
@@ -78,5 +93,9 @@ input[type=text], input[type=number], input[type=date], input[type=time], select
 }
 .card-header {
     padding: 20px 20px 0px;
+}
+
+#navbar {
+    background-image: none;
 }
 
